--- a/src/global.css
+++ b/src/global.css
@@ -3,3 +3,9 @@ body {
     color: whitesmoke;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+#root {
+    width: 100%; /* Ensure it takes up full width */
+    height: 100%; /* Ensure it takes up full height */
+    overflow: hidden; /* Prevent content overflow */
+  }
